# LoginSwitch

./: .gitignore  README.md  pyproject.toml
src/loginswitch/: __init__.py  __main__.py  app.py  audit.py  bootstrap.py  confirm.py  credentials.py  launcher.py  models.py  network.py  paths.py  process_launcher.py  storage.py
src/loginswitch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/loginswitch/adapters/: __init__.py  base.py  config_file.py  detector.py  registry.py  ui_automation.py
tests/: test_config_file_adapter.py  test_detector.py  test_launcher.py  test_launcher_failure.py  test_profile_store.py  test_ui_automation_adapter.py
