[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loginswitch"
version = "0.1.0"
description = "桌面客户端环境与账号快速切换启动器"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
